--- a/portal/templates/_subbase.html
+++ b/portal/templates/_subbase.html
@@ -12,6 +12,11 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/main.css?v=885" rel="stylesheet">
     <link href="/static/css/dashboard.css?v=885" rel="stylesheet">
+
+    <link rel="shortcut icon" href="/static/img/favicon.ico">
+    <link rel="icon" type="image/png" href="/static/img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/static/img/favicon-16x16.png" sizes="16x16" />
+
     <!-- Datetime Picker -->
     <link rel="stylesheet" href="/static/css/bootstrap-datetimepicker.min.css">
     {% block css %}{% endblock %}
