--- a/portal/templates/_modalbase.html
+++ b/portal/templates/_modalbase.html
@@ -29,6 +29,16 @@
         {% endfor %}
       {% endwith %}
       
+      <div class="alert alert-warning" role="alert">
+        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+        <span class="sr-only">Warning:</span>
+            Important message to all recruiting sites.
+            Patients attending their 5 year follow-up health
+            check who are already GENVASC participants cannot
+            be recruited a second time. Duplicate recruits
+            will be excluded and you will not be reimbursed for their samples.
+      </div>
+
       {% block content %}{% endblock %}
   </div>
 
