Add new documents

--- a/portal/templates/site_file_documentation/admin.html
+++ b/portal/templates/site_file_documentation/admin.html
@@ -29,7 +29,7 @@
   <h3><a href="/static/documents/admin/6.GENVASC Practice Study Pack generic 020317.pdf" title="6.GENVASC Practice Study Pack generic 020317.pdf" target="_blank">6.GENVASC Practice Study Pack generic 020317.pdf</a></h3>
  </li>
  <li>
-  <h3><a href="/static/documents/admin/7.GENVASC Site File production list of documents required.pdf" title="7.GENVASC Site File production list of documents required.pdf" target="_blank">7.GENVASC Site File production list of documents required.pdf</a></h3>
+  <h3><a href="/static/documents/admin/7. GENVASC Site File production list of documents required 06082018.pdf" title="7. GENVASC Site File production list of documents required 06082018.pdf" target="_blank">7. GENVASC Site File production list of documents required 06082018.pdf</a></h3>
  </li>
  <li>
   <h3><a href="/static/documents/admin/8. Adding Letter Templates Leicestershire HIS (Emis Web) 06.10.14.pdf" title="8. Adding Letter Templates Leicestershire HIS (Emis Web) 06.10.14.pdf" target="_blank">8. Adding Letter Templates Leicestershire HIS (Emis Web) 06.10.14.pdf</a></h3>
