--- a/portal/templates/site_file_documentation/documents.html
+++ b/portal/templates/site_file_documentation/documents.html
@@ -35,7 +35,7 @@
   <h3><a href="/static/documents/documents/9.Paragraph to be added to the NHS Health Check invite letter.pdf" title="9.Paragraph to be added to the NHS Health Check invite letter.pdf" target="_blank">9.Paragraph to be added to the NHS Health Check invite letter.pdf</a></h3>
  </li>
  <li>
-  <h3><a href="/static/documents/documents/10.GP practice invitation letter v1 0 280414.pdf" title="10.GP practice invitation letter v1 0 280414.pdf" target="_blank">10.GP practice invitation letter v1 0 280414.pdf</a></h3>
+  <h3><a href="/static/documents/documents/10 GP practice invitation letter v1 0 280414.pdf" title="10 GP practice invitation letter v1 0 280414.pdf" target="_blank">10 GP practice invitation letter v1 0 280414.pdf</a></h3>
  </li>
  <li>
   <h3><a href="/static/documents/documents/11.GENVASC GP Invitation Letter.pdf" title="11.GENVASC GP Invitation Letter.pdf" target="_blank">11.GENVASC GP Invitation Letter.pdf</a></h3>
