--- a/portal/templates/site_file_documentation/sops.html
+++ b/portal/templates/site_file_documentation/sops.html
@@ -41,6 +41,9 @@
   <h3><a href="/static/documents/sops/11.File Note Study specific SOPs.pdf" title="11.File Note Study specific SOPs.pdf" target="_blank">11.File Note Study specific SOPs.pdf</a></h3>
  </li>
  <li>
+  <h3><a href="/static/documents/sops/11a NEW UoL File Note Site file sign post .pdf" title="11a NEW UoL File Note Site file sign post .pdf" target="_blank">11a NEW UoL File Note Site file sign post .pdf</a></h3>
+ </li>
+ <li>
   <h3><a href="/static/documents/sops/12.File Note UoL Sponsor SOPs.pdf" title="12.File Note UoL Sponsor SOPs.pdf" target="_blank">12.File Note UoL Sponsor SOPs.pdf</a></h3>
  </li>
  <li>
