--- a/portal/templates/site_file_documentation/documents.html
+++ b/portal/templates/site_file_documentation/documents.html
@@ -20,7 +20,7 @@
   <h3><a href="/static/documents/documents/4.LH9668P-GENVASC lable template LLR v3 2016.pdf" title="4.LH9668P-GENVASC lable template LLR v3 2016.pdf" target="_blank">4.LH9668P-GENVASC lable template LLR v3 2016.pdf</a></h3>
  </li>
  <li>
-  <h3><a href="/static/documents/documents/5.175904_141016_GENVASC full PIS vs 4.0 LLR 12 September 2013 English .pdf" title="5.175904_141016_GENVASC full PIS vs 4.0 LLR 12 September 2013 English .pdf" target="_blank">5.175904_141016_GENVASC full PIS vs 4.0 LLR 12 September 2013 English .pdf</a></h3>
+  <h3><a href="/static/documents/documents/Genvasc DL 2018 v4.0.pdf" title="5.Genvasc DL 2018 v4.0.pdf" target="_blank">5.Genvasc DL 2018 v4.0.pdf</a></h3>
  </li>
  <li>
   <h3><a href="/static/documents/documents/6.167617 Abbreviated PIS Version 3.0 12092013 English.pdf" title="6.167617 Abbreviated PIS Version 3.0 12092013 English.pdf" target="_blank">6.167617 Abbreviated PIS Version 3.0 12092013 English.pdf</a></h3>
@@ -44,10 +44,10 @@
   <h3><a href="/static/documents/documents/12.GENVASC  label template Lakeside v 1 .pdf" title="12.GENVASC  label template Lakeside v 1 .pdf" target="_blank">12.GENVASC  label template Lakeside v 1 .pdf</a></h3>
  </li>
  <li>
-  <h3><a href="/static/documents/documents/13.GENVASC DL vs 4.0 12 September 2013 (Lakeside_ENGLISH) .pdf" title="13.GENVASC DL vs 4.0 12 September 2013 (Lakeside_ENGLISH) .pdf" target="_blank">13.GENVASC DL vs 4.0 12 September 2013 (Lakeside_ENGLISH) .pdf</a></h3>
+  <h3><a href="/static/documents/documents/Genvasc DL 2018 v4.0.pdf" title="13.Genvasc DL 2018 v4.0.pdf" target="_blank">13.Genvasc DL 2018 v4.0.pdf</a></h3>
  </li>
  <li>
-  <h3><a href="/static/documents/documents/14. GENVASC Full PIS vs 4.0  (GPA 360 PML ENGLISH)  231117.pdf" title="14. GENVASC Full PIS vs 4.0  (GPA 360 PML ENGLISH)  231117.pdf" target="_blank">14. GENVASC Full PIS vs 4.0  (GPA 360 PML ENGLISH)  231117.pdf</a></h3>
+  <h3><a href="/static/documents/documents/Genvasc DL 2018 v4.0.pdf" title="14. Genvasc DL 2018 v4.0.pdf" target="_blank">14. Genvasc DL 2018 v4.0.pdf</a></h3>
  </li>
  <li>
   <h3><a href="/static/documents/documents/15.GENVASC NENE labels 15 03 17.pdf" title="15.GENVASC NENE labels 15 03 17.pdf" target="_blank">15.GENVASC NENE labels 15 03 17.pdf</a></h3>
