--- a/portal/templates/help.html
+++ b/portal/templates/help.html
@@ -6,210 +6,212 @@
   <h1>Help</h1>
 </div>
 
-<h3>Access the System</h3>
+<section>
+    <h3>Access the System</h3>
 
-<p>
-  To request access to the system, send your email address 
-  to <a href="mailto:christopher.greengrass@uhl-tr.nhs.uk">christopher.greengrass@uhl-tr.nhs.uk</a>
-  or ring <a href="tel:01162044771">0116 204 4771</a>.  Chris
-  will register your email address in the system, that will
-  allow you to set a password.
-</p>
-
-<h4>Setting Your Password</h4>
-
-<p>
-    Once your email address has been registered, you can use
-    the <i>First Login or Forgotten Password</i> link on the login
-    page to set your password.
-</p>
-
-<img class="screenshot" src="/static/img/loginScreen.PNG">
-
-<p>
-    After clicking the button you will be shown the
-    <i>Send Password Reset</i> screen.
-</p>
-
-<img class="screenshot" src="/static/img/SendResetEmail.PNG">
-
-<p>
-    Enter the email address that was registered on the
-    site into the text box and click the
-    <i>Send Set Password Link</i> button.
-</p>
-
-<p>
-    A few moments later you should receive an email from the portal
-    containing a long link.  Click on the link or
-    paste it into a browser address bar to be taken to the
-    <i>Password Reset</i> screen.  Be warned that the link
-    will expire after a few hours, but you can always request
-    another email to be sent.
-</p>
-
-<img class="screenshot" src="/static/img/ResetPassword.PNG">
-
-<p>
-    You can now enter the password that you want to use to log into the
-    GENVASC Portal.
-</p>
-
-<h3>Recruits List</h3>
-
-<p>
-  The recruits listing page shows all participants recruited 
-  at your practice, regardless of whether the details were
-  entered at the practice or at the LCBRU.
-</p>
-
-<img class="screenshot" src="/static/img/recruit_listing.PNG">
-
-<p>
-  The participants are shown in with the most recently
-  recruited participant at the top in pages of 10
-  participants per page.  If more than one page of
-  participants is available, a page navigator will be displayed
-  at the bottom of the page that will allow you to move to
-  other pages.
-</p>
-
-<img class="screenshot" src="/static/img/pagination.PNG">
-
-<h4>Recruits Details</h4>
-
-<p>
-  Recruit details are displayed in a series of panels, with the
-  participants name across the top, followed by 2 columns of details.
-</p>
-
-<p>
-  When a recruit is first entered, their name will be blank.  The name
-  will be filled in when the details for the participant have been confirmed
-  by staff at the LCBRU.
-</p>
-
-<p>
-  The left panel shows the details submitted for the participant by
-  the practice.  This includes that participant's NHS Number, date of
-  birth and the date of recruitment.  If these details were entered
-  by the GP practice, the name of the person who entered the details
-  will also be shown here.
-</p>
-
-<p>
-  The right panel show the details of the participant's registration
-  at the LCBRU.  This include's the status of the enrolment, the
-  participant's study identifier, the date that the participant
-  was processed by the LCBRU and the member of staff that carried
-  out the processing.  Until the details have been processed by
-  the LCBRU, all of these details except for the status will be blank.
-</p>
-
-<p>
-  The status field can have one of a few values.  An explanation of
-  these status is listed below:
-</p>
-
-<dl>
-  <dt>Created</dt>
-  <dd>
-    The details have been created on the portal, but have
-    not yet been transferred to the LCBRU.  The recruitment
-    usually only stays in this status for less than an hour.
-  </dd>
-  <dt>Awaiting processing</dt>
-  <dd>
-    Details of the participant have been transferred to the
-    LCBRU and are awaiting processing.  Once the participant's
-    demographoics have been obtained from NHS Digital and the
-    blood sample has arrived at the LCBRU, the participant
-    will be processed.  This could take several days.
-  </dd>
-  <dt>Recruited</dt>
-  <dd>
-    The demographics and blood sample have arrived at the LCBRU
-    and the recruit has been successfully processed.
-  </dd>
-  <dt>Available for Cohort</dt>
-  <dd>
-    The participant has been enrolled into the GENVASC study
-    for more than 30 days and the participants details are
-    now available to the LCBRU staff for research.
-  </dd>
-  <dt>Excluded</dt>
-  <dd>
-    The recruitment was excluded from the GENVASC study for some
-    reason.  This may have been that the participant was found
-    not to have met the inclusion criteria, have met an
-    exclusion criterion, or was already enrolled in the
-    GENVASC study.
-  </dd>
-  <dt>Withdraw</dt>
-  <dd>
-    The recruit was successfully recruited into the GENVASC
-    study, but at a later date decided to withdraw from the
-    study.
-  </dd>
-</dl>
-
-<h4>Recruits Searching</h4>
-
-<p>
-  At the top of the recruit listing in a box that allows you to search
-  for participants by name, NHS Number of study identifier.  You can
-  search for either the full name or identifier or just a part of it.
-  For example, if you type in the phrase '<em>mar</em>'' and press <strong>enter</strong>
-  or click the <strong>Search</strong> button, all participants that
-  have '<em>mar</em>' in their name, such as <em>Mary</em>,
-  <em>Marie</em>,<em>Mark</em> or <em>Marcus</em>, will be displayed.
-</p>
-
-<p>
-  To clear the search criterion and go back to a full list of
-  participants, click the <strong>Clear Search</strong> button.
-</p>
-
-<h4>Entering a new Recruit</h4>
-
-<p>
-  To enter the details of a new recruit, click the <strong>Add Recruit</strong>
-  button on the recruit listing.
-</p>
-
-<img class="screenshot" src="/static/img/enter_recruit.PNG">
-
-<p>
-  Each new recruit requires 3 pieces of information:
-</p>
-
-<dl>
-  <dt>NHS Number</dt>
-  <dd>
-    Must be a valid NHS Number.
-  </dd>
-  <dt>Date of Birth</dt>
-  <dd>
-    Age of the participants should be between 40 and 70 years
-    old.
-  </dd>
-  <dt>Date Recruited</dt>
-  <dd>
-    Cannot be a date in the furture.
-  </dd>
-</dl>
-
-<p>
-  Once the details have been entered, click the <strong>Save</strong>
-  button to submit the recruit details.
-</p>
-
-<h4>Editing Recruits</h4>
-
-<p>
-  The details of a recruit can be edited up to the point that the
-  recruit is processed by the LCBRU.  To edit the participant details,
-  click the <strong>Edit</strong> button in the recruit panel.
-</p>
+    <p>
+      To request access to the system, send your email address 
+      to <a href="mailto:christopher.greengrass@uhl-tr.nhs.uk">christopher.greengrass@uhl-tr.nhs.uk</a>
+      or ring <a href="tel:01162044771">0116 204 4771</a>.  Chris
+      will register your email address in the system, that will
+      allow you to set a password.
+    </p>
+    
+    <h4>Setting Your Password</h4>
+    
+    <p>
+        Once your email address has been registered, you can use
+        the <i>First Login or Forgotten Password</i> link on the login
+        page to set your password.
+    </p>
+    
+    <img class="screenshot" src="/static/img/loginScreen.PNG">
+    
+    <p>
+        After clicking the button you will be shown the
+        <i>Send Password Reset</i> screen.
+    </p>
+    
+    <img class="screenshot" src="/static/img/SendResetEmail.PNG">
+    
+    <p>
+        Enter the email address that was registered on the
+        site into the text box and click the
+        <i>Send Set Password Link</i> button.
+    </p>
+    
+    <p>
+        A few moments later you should receive an email from the portal
+        containing a long link.  Click on the link or
+        paste it into a browser address bar to be taken to the
+        <i>Password Reset</i> screen.  Be warned that the link
+        will expire after a few hours, but you can always request
+        another email to be sent.
+    </p>
+    
+    <img class="screenshot" src="/static/img/ResetPassword.PNG">
+    
+    <p>
+        You can now enter the password that you want to use to log into the
+        GENVASC Portal.
+    </p>
+    
+    <h3>Recruits List</h3>
+    
+    <p>
+      The recruits listing page shows all participants recruited 
+      at your practice, regardless of whether the details were
+      entered at the practice or at the LCBRU.
+    </p>
+    
+    <img class="screenshot" src="/static/img/recruit_listing.PNG">
+    
+    <p>
+      The participants are shown in with the most recently
+      recruited participant at the top in pages of 10
+      participants per page.  If more than one page of
+      participants is available, a page navigator will be displayed
+      at the bottom of the page that will allow you to move to
+      other pages.
+    </p>
+    
+    <img class="screenshot" src="/static/img/pagination.PNG">
+    
+    <h4>Recruits Details</h4>
+    
+    <p>
+      Recruit details are displayed in a series of panels, with the
+      participants name across the top, followed by 2 columns of details.
+    </p>
+    
+    <p>
+      When a recruit is first entered, their name will be blank.  The name
+      will be filled in when the details for the participant have been confirmed
+      by staff at the LCBRU.
+    </p>
+    
+    <p>
+      The left panel shows the details submitted for the participant by
+      the practice.  This includes that participant's NHS Number, date of
+      birth and the date of recruitment.  If these details were entered
+      by the GP practice, the name of the person who entered the details
+      will also be shown here.
+    </p>
+    
+    <p>
+      The right panel show the details of the participant's registration
+      at the LCBRU.  This include's the status of the enrolment, the
+      participant's study identifier, the date that the participant
+      was processed by the LCBRU and the member of staff that carried
+      out the processing.  Until the details have been processed by
+      the LCBRU, all of these details except for the status will be blank.
+    </p>
+    
+    <p>
+      The status field can have one of a few values.  An explanation of
+      these status is listed below:
+    </p>
+    
+    <dl>
+      <dt>Created</dt>
+      <dd>
+        The details have been created on the portal, but have
+        not yet been transferred to the LCBRU.  The recruitment
+        usually only stays in this status for less than an hour.
+      </dd>
+      <dt>Awaiting processing</dt>
+      <dd>
+        Details of the participant have been transferred to the
+        LCBRU and are awaiting processing.  Once the participant's
+        demographoics have been obtained from NHS Digital and the
+        blood sample has arrived at the LCBRU, the participant
+        will be processed.  This could take several days.
+      </dd>
+      <dt>Recruited</dt>
+      <dd>
+        The demographics and blood sample have arrived at the LCBRU
+        and the recruit has been successfully processed.
+      </dd>
+      <dt>Available for Cohort</dt>
+      <dd>
+        The participant has been enrolled into the GENVASC study
+        for more than 30 days and the participants details are
+        now available to the LCBRU staff for research.
+      </dd>
+      <dt>Excluded</dt>
+      <dd>
+        The recruitment was excluded from the GENVASC study for some
+        reason.  This may have been that the participant was found
+        not to have met the inclusion criteria, have met an
+        exclusion criterion, or was already enrolled in the
+        GENVASC study.
+      </dd>
+      <dt>Withdraw</dt>
+      <dd>
+        The recruit was successfully recruited into the GENVASC
+        study, but at a later date decided to withdraw from the
+        study.
+      </dd>
+    </dl>
+    
+    <h4>Recruits Searching</h4>
+    
+    <p>
+      At the top of the recruit listing in a box that allows you to search
+      for participants by name, NHS Number of study identifier.  You can
+      search for either the full name or identifier or just a part of it.
+      For example, if you type in the phrase '<em>mar</em>'' and press <strong>enter</strong>
+      or click the <strong>Search</strong> button, all participants that
+      have '<em>mar</em>' in their name, such as <em>Mary</em>,
+      <em>Marie</em>,<em>Mark</em> or <em>Marcus</em>, will be displayed.
+    </p>
+    
+    <p>
+      To clear the search criterion and go back to a full list of
+      participants, click the <strong>Clear Search</strong> button.
+    </p>
+    
+    <h4>Entering a new Recruit</h4>
+    
+    <p>
+      To enter the details of a new recruit, click the <strong>Add Recruit</strong>
+      button on the recruit listing.
+    </p>
+    
+    <img class="screenshot" src="/static/img/enter_recruit.PNG">
+    
+    <p>
+      Each new recruit requires 3 pieces of information:
+    </p>
+    
+    <dl>
+      <dt>NHS Number</dt>
+      <dd>
+        Must be a valid NHS Number.
+      </dd>
+      <dt>Date of Birth</dt>
+      <dd>
+        Age of the participants should be between 40 and 70 years
+        old.
+      </dd>
+      <dt>Date Recruited</dt>
+      <dd>
+        Cannot be a date in the furture.
+      </dd>
+    </dl>
+    
+    <p>
+      Once the details have been entered, click the <strong>Save</strong>
+      button to submit the recruit details.
+    </p>
+    
+    <h4>Editing Recruits</h4>
+    
+    <p>
+      The details of a recruit can be edited up to the point that the
+      recruit is processed by the LCBRU.  To edit the participant details,
+      click the <strong>Edit</strong> button in the recruit panel.
+    </p>
+</section>
 
 {% endblock %}
