--- a/portal/static/css/main.css
+++ b/portal/static/css/main.css
@@ -1,39 +1,153 @@
-/* custom styles */
-dl.inline dd {
-  display: inline;
+/*
+ * Base structure
+ */
+
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {
+  background-color: #f1f1f1;
+  color: #333;
+}
+
+.navbar a {
+  color: #333;
+  transition: color 0.5s;
+  transition: background-color 0.5s;
+}
+
+header.pageheader {
+  background-image: url(../img/bars-top.svg);
+  background-size: 100% auto;
+  padding: 15px 0 0 0;
+}
+
+header.pageheader h1 {
+  background-color: white;
   margin: 0;
-}
-dl.inline dd:after{
-  display: block;
-  content: '';
-}
-dl.inline dt{
-  display: inline-block;
-  min-width: 100px;
-}
-dl.inline {
-	margin: 0;
+  padding: 50px 10px 10px 10px;
+  font-size: 20px;
+  font-weight: bold;
+  background-image: url(../img/nihr-lbrc-cropped.png);
+  background-size: 200px auto;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-origin: content-box;
 }
 
-.day-form-control, .month-form-control, .year-form-control {
-	width: auto;
-	display: inline-block;
+footer {
+  margin-top: 60px;
 }
 
-.login_help {
-	width: 600px;
-	margin: 20px auto;
-	color: #001f3f;
+footer p {
+  background-color: #333;
+  color: white;
+  padding: 10px 10px;
 }
 
-.outer {
-	background-image: url("../img/nihr-logo.png");
-	background-repeat: no-repeat;
-	background-position: right 20px;
+.navbar{
+  padding: 10px 0;
+  font-family: Open Sans;
 }
 
-img.screenshot {
-	border: solid 1px #888;
-	margin: 40px auto;
-	display: block;
+.navbar a {
+  color: #333;
+  transition: color 0.5s;
+  transition: background-color 0.5s;
+  font-size: 18px;
+  vertical-align: baseline;
+ }
+
+.navbar li a:hover, .navbar .open a:focus {
+  background-color: #e1261c;
+  color: white;
+}
+
+.navbar .navbar-brand {
+  font-size: 15px;
+  background-color: #e1261c;
+  color: white;
+}
+
+section {
+  background-color: white;
+  padding: 20px;
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+}
+
+section.tab {
+  border-top: none;
+}
+
+textarea {
+  resize: vertical;
+}
+
+dl {
+  columns: 100px 3;
+}
+
+dl div {
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid;
+}
+
+dd {
+  margin-bottom: 10px;
+}
+
+.nav-tabs {
+  padding-left: 20px;
+}
+
+.list-group-item a.download {
+  margin-right: 20px;
+  font-size: 20px;
+}
+
+.study_list li {
+  list-style: none;
+}
+
+.study_list a {
+  font-size: 20px;
+}
+
+.login-form {
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-70%);
+  box-shadow: 5px 10px 18px #CCC;
+}
+
+.login-form .panel-body {
+  padding: 0;
+}
+
+.login-form-body {
+  display: flex;
+  align-items: stretch;
+}
+
+.login-form-body form {
+  width: 500px;
+  flex: 1;
+}
+
+.login-form-body .description {
+  flex: 1;
+  border-left: 1px solid #337ab7;
+  padding: 20px;
+  background-color: #5bc0de;
+  color: #FFF;
+  font-weight: bold;
+}
+
+.errors {
+  margin-top: 10px;
+}
+
+.panel form {
+  padding: 40px;
 }
