--- a/portal/templates/_subbase.html
+++ b/portal/templates/_subbase.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+
+  {% set site_name = 'GENVASC GP Portal' %}
+
   <head>
     <meta charset="utf-8">
     <title>GENVASC GP Portal</title>
@@ -8,17 +11,18 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <!-- styles -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/main.css?v=885" rel="stylesheet">
-    <link href="/static/css/dashboard.css?v=885" rel="stylesheet">
-
-    <link rel="shortcut icon" href="/static/img/favicon.ico">
-    <link rel="icon" type="image/png" href="/static/img/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="/static/img/favicon-16x16.png" sizes="16x16" />
-
+    <link rel="icon" href="{{ url_for('static', filename='img/cropped-favicon-32x32.png') }}" sizes="32x32" />
+    <link rel="icon" href="{{ url_for('static', filename='img/cropped-favicon-192x192.png') }}" sizes="192x192" />
+    <link rel="apple-touch-icon-precomposed" href="{{ url_for('static', filename='img/cropped-favicon-180x180.png') }}" />
+    <meta name="msapplication-TileImage" content="{{ url_for('static', filename='img/cropped-favicon-270x270.png') }}" />
+    
     <!-- Datetime Picker -->
-    <link rel="stylesheet" href="/static/css/bootstrap-datetimepicker.min.css">
+    <link rel='stylesheet' id='megamenu-google-fonts-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A400%2C700&#038;ver=4.8' type='text/css' media='all' />
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/main.css', ver=13) }}" rel="stylesheet">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
+
     {% block css %}{% endblock %}
 
     <!--[if lt IE 9]>
@@ -27,18 +31,20 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body class="container">
     {% block base_content %}{% endblock %}
 
     <!-- scripts -->
-    <script src="/static/js/jquery-1.11.2.min.js" type="text/javascript"></script>
-    <script src="/static/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="/static/js/modernizr.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
     <!-- Moment (necessary for Datetime picker) -->
-    <script src="/static/js/moment.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" type="text/javascript"></script>
     <!-- Datetime -->
-    <script src="/static/js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
-    <script src="/static/js/main.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
+
+    <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>
+
     {% block js %}{% endblock %}
 
   </body>
