--- a/portal/templates/security/forgot_password.html
+++ b/portal/templates/security/forgot_password.html
@@ -1,37 +1,44 @@
-{% extends "_modalbase.html" %}
+{% extends "_loginFormBase.html" %}
 {% import "_formHelpers.html" as formhelper %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 
+{% block formname %}First Login or Forgotten Password{% endblock%}
+{% block errors %}
+    {{ formhelper.render_form_errors(forgot_password_form)  }}
+{% endblock %}
+
 {% block content %}
 
-<div class="jumbotron">
-  <div class="container">
-		<h1 class="text-center">GENVASC Portal</h1>
-        <p class="col-sm-6 col-sm-offset-3">
-            This page can be used to set a new password
-            when you first access the system or if you
-            have forgotten your password.
-         </p>
-        <p class="col-sm-6 col-sm-offset-3">
-            Enter your email address that is registered with
-            the portal.  A link will then be emailed to that
-            address that will allow you to set a new password.
-         </p>
-		<form action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form" class="form-horizontal">
-			{{ forgot_password_form.hidden_tag() }}
+<form action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
+    {{ forgot_password_form.hidden_tag() }}
 
-			<div class="col-sm-6 col-sm-offset-3">
-        		{{ formhelper.render_field(forgot_password_form.email) }}
-			</div>
-			<div class="col-sm-6 col-sm-offset-3 text-right">
-                <a href="{{ url_for('security.login') }}" class="btn btn-info" role="button">Login</a>
-                <button type="submit" class="btn btn-primary">Send Set Password Link</button>
-			</div>
-		</form>
-  </div>
-	<p class="login_help">
-		If you have any problems logging on or would like to request a logon, take a look at out <a href="{{ url_for('help') }}">Help Guide</a>.
-	<p>
+    <div class="form-group input-group">
+        <span class="input-group-addon">
+            <span class="fas fa-at"></span>
+        </span>
+        {{ forgot_password_form.email(class="form-control", placeholder="Email Address") }}
+    </div>
+    
+    <div class="text-right">
+        <a href="{{ url_for_security('login') }}" class="btn btn-info" role="button">Login</a>
+        <button type="submit" class="btn btn-primary">Send Set Password Link</button>
+    </div>
+</form>
+
+<div class="description">
+    <p>
+        This page can be used to set a new password
+        when you first access the system or if you
+        have forgotten your password.
+    </p>
+    <p>
+        Enter your email address that is registered with
+        the portal.  A link will then be emailed to that
+        address that will allow you to set a new password.
+    </p>
+    <p>
+        If you have any problems logging on or would like to request a logon, take a look at out <a href="{{ url_for('help') }}">Help Guide</a>.
+    <p>
 </div>
 
 {% endblock %}
