--- a/portal/templates/security/reset_password.html
+++ b/portal/templates/security/reset_password.html
@@ -1,32 +1,44 @@
-{% extends "_modalbase.html" %}
+{% extends "_loginFormBase.html" %}
 {% import "_formHelpers.html" as formhelper %}
+
+{% block formname %}Reset Password{% endblock%}
+{% block errors %}
+	{{ formhelper.render_form_errors(reset_password_form)  }}
+{% endblock %}
 
 {% block content %}
 
-<div class="jumbotron">
-  <div class="container">
-		<h1 class="text-center">GENVASC Portal</h1>
-        <p class="col-sm-6 col-sm-offset-3">
-            Enter and confirm a new password.  You will then be logged
-            on to the GENVASC Portal.
-        </p>
-		<form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form" class="form-horizontal">
-			{{ reset_password_form.hidden_tag() }}
+<form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form" class="form-horizontal">
+	{{ reset_password_form.hidden_tag() }}
 
-			<div class="col-sm-6 col-sm-offset-3">
-        		{{ formhelper.render_field(reset_password_form.password) }}
-			</div>
-			<div class="col-sm-6 col-sm-offset-3">
-        		{{ formhelper.render_field(reset_password_form.password_confirm) }}
-			</div>
-			<div class="col-sm-6 col-sm-offset-3 text-right">
-                <button type="submit" class="btn btn-primary">Reset</button>
-			</div>
-		</form>
-  </div>
-	<p class="login_help">
-		If you have any problems logging on or would like to request a logon, take a look at out <a href="{{ url_for('help') }}">Help Guide</a>.
+	<div class="form-group input-group">
+		<span class="input-group-addon">
+			<span class="fas fa-lock"></span>
+		</span>
+		{{ reset_password_form.password(class="form-control", placeholder="New Password") }}
+	</div>
+
+	<div class="form-group input-group">
+		<span class="input-group-addon">
+			<span class="fas fa-check-double"></span>
+		</span>
+		{{ reset_password_form.password_confirm(class="form-control", placeholder="Confirm New Password") }}
+	</div>
+
+	<div class="text-right">
+		<button type="submit" class="btn btn-primary">Reset</button>
+	</div>
+</form>
+
+<div class="description">
 	<p>
+		Your new password must contain at least one of each of the following characters:
+	</p>
+	<ul>
+		<li>Lowercase letter</li>
+		<li>Uppercase letter</li>
+		<li>Punctuation character</li>
+	</ul>
 </div>
-
+	
 {% endblock %}
