--- a/portal/templates/security/email/reset_instructions.html
+++ b/portal/templates/security/email/reset_instructions.html
@@ -1,6 +1,7 @@
 <p>
-    You have requested a link to reset your password for the GENVASC Portal.
+    You have requested a link to reset your password for the GENVASC Portal.  Either click the link below, or
+    copy the address into your browsers address bar.
 </p>
 
-{{ reset_link }}
+<a href='{{ reset_link }}'>{{ reset_link }}</a>
 
